--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,14 @@ body{
 }
 
 header{
-  display: fixed;
+  position: fixed;
   display: flex;
   width: 100%;
   height: 80px;
   background-color: white;
   justify-content: space-between;
   padding: 10px;
+  z-index: 99;
 }
 
 header .menu{
@@ -36,7 +37,11 @@ header .menu nav ul{
   color: #6f6f6f;
 }
 
-.menu nav .bottone{
+.menu nav ul li .bottone{
+  color: white;
+}
+
+.bottone{
   background-color: rgba(0,97,255,255);
   color: white;
   padding: 10px;
@@ -46,55 +51,63 @@ header .menu nav ul{
   width: 100%;
   background-color: rgba(180,208,231,255);
   text-align: center;
-  display: flex;
   justify-content: center;
   padding: 40px;
+  padding-top: 120px;
 }
 
-.jumbotron .content h1{
-  font-size: 70px;
-}
-
-.jumbotron .content{
-  width: 70%;
-  text-align: left;
-}
-
-.jumbotron .content img{
+.jumbotron .column2 img{
   width: 650px;
   height: 350px;
-}
-
-.jumbotron .content .intro .presentazione{
-  width: 33%;
-}
-
-.jumbotron .content .intro .presentazione p{
-  padding-bottom: 30px;
-}
-
-.jumbotron .content .intro{
-  display: flex;
-  float: left;
-  position: relative;
-  padding-top: 20px;
-}
-
-.jumbotron .content .intro img{
   position: absolute;
-  top: 20px;
   right: 20px;
 }
 
-.intro .presentazione .bottone{
-  background-color: rgba(0,97,255,255);
-  color: white;
-  padding: 10px;
+.jumbotron .row1{
+  width: 70%;
+  margin: 0 auto;
 }
 
-.jumbotron .content .arrow{
-  font-size: 40px;
+.jumbotron .row1 h1{
+  font-size: 70px;
+  text-align: left;
+  padding-bottom: 40px;
 }
+
+.jumbotron .row1 .content{
+  display: flex;
+  position: relative;
+}
+
+.row1 .content .column1{
+  width: 30%;
+  text-align: left;
+}
+
+.row1 .content .column1 p{
+  padding-bottom: 30px;
+  font-size: 15px;
+}
+
+.row1 .content .column2{
+  width: 70%;
+}
+
+.container{
+  width: 50%;
+  margin: 0 auto;
+  background-color: aquamarine;
+  padding-top: 100px;
+}
+
+.container .check{
+  padding: 30px 0;
+}
+
+.container .check input span{
+padding-right: 20px;
+}
+
 
 
 
