--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ header{
 
 header .menu{
   padding: 15px;
+  align-self: center;
 }
 
 header .menu nav ul{
@@ -132,12 +133,12 @@ main .container .row2 .column p,li,span{
   text-align: center;
 }
 
-.column .colonne ul{
-  padding-top: 20px;
+.column .colonne p{
+  padding-bottom: 40px;
 }
 
 .row2 .column ul li{
-  padding: 10px;
+  padding: 15px 0;
   list-style: none;
 }
 
@@ -155,7 +156,12 @@ p.mark{
 }
 
 .row2 .column .colonne{
-  padding: 10px;
+  padding: 20px;
+}
+
+.colonne hr{
+  width: 20%;
+  margin: 30px 0 25px 0;
 }
 
 .row3{
@@ -203,9 +209,18 @@ section .column1 p{
   width: 40%;
 }
 
+.row4 .column2 *{
+  margin-bottom: 20px;
+}
+
+.column2 button{
+  padding: 10px;
+  background-color: white;
+}
+
 .row4 .column1 img{
   width: 500px;
-  height: 380px;
+  height: 400px;
 }
 
 .row4 .column2 h3{
