--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ header{
   position: fixed;
   display: flex;
   width: 100%;
-  height: 80px;
+  height: 60px;
   background-color: white;
   justify-content: space-between;
   padding: 10px;
@@ -30,10 +30,11 @@ header .menu nav ul{
 
 .menu nav ul li{
   list-style: none;
+  align-self: center;
 }
 
 .menu nav ul li a{
-  padding-right: 25px;
+  padding: 10px;
   text-decoration: none;
   color: #6f6f6f;
 }
