--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ section .row{
 .s-row6 .col-text{
   width: calc(100% / 3);
   padding: 20px;
-  background-color: lightgrey;
+  background-color: #f5f5f5;
 }
 
 .s-row6 .col-text img{
